# ERPBOK

./: CLAUDE.md  CODESPACES_QUICKSTART.md
.devcontainer/: README.md  devcontainer.json  setup.sh
00_project_foundation/docs/: 00_PhaseBasedDocumentStructure.md
00_project_foundation/docs/charter/: 00_ProjectCharter.md
00_project_foundation/docs/management/: 07_ProjectManagementPlan.md  08_DocumentManagementSystem.md  10_ChangeManagementRules.md
00_project_foundation/docs/standards/: 14_CodingStandardsGitWorkflow.md
01_analysis_design/docs/design/: 05_DataModelDesign.md  06_APISpecification.md
01_analysis_design/docs/planning/: 09_ImplementationPlan.md
02_phase1_mvp/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
02_phase1_mvp/docs/: admin_manual.md  user_manual.md
02_phase1_mvp/docs/deployment/: 21_Phase1DeploymentPlan.md
02_phase1_mvp/docs/development/: 18_Phase1DevelopmentEnvironmentGuide.md  TDD_STRATEGY.md
02_phase1_mvp/docs/planning/: 00_Phase1KnowledgeSourcesSpecification.md  16_Phase1ImplementationPlan.md  Phase2_Preparation_Architecture.md
02_phase1_mvp/docs/testing/: 20_Phase1TestPlan.md
02_phase1_mvp/scripts/: download_knowledge_sources.py
02_phase1_mvp/src/erpfts/: __init__.py
02_phase1_mvp/src/erpfts/api/: __init__.py  main.py
02_phase1_mvp/src/erpfts/api/middleware/: __init__.py  performance.py
02_phase1_mvp/src/erpfts/api/routes/: __init__.py  documents.py  health.py  knowledge.py  performance.py  search.py
02_phase1_mvp/src/erpfts/cli/: __init__.py  main.py
02_phase1_mvp/src/erpfts/core/: __init__.py  cache.py  config.py  exceptions.py  performance.py  rate_limiter.py
02_phase1_mvp/src/erpfts/db/: __init__.py  init_db.py  session.py
02_phase1_mvp/src/erpfts/schemas/: search.py
02_phase1_mvp/src/erpfts/services/: __init__.py  document_service.py  embedding_service.py  search_service.py
02_phase1_mvp/src/erpfts/ui/: __init__.py  main.py
02_phase1_mvp/src/erpfts/utils/: __init__.py  auth.py  file_utils.py  text_processing.py
02_phase1_mvp/tests/: conftest.py
02_phase1_mvp/tests/integration/: test_error_handling.py  test_workflows.py
02_phase1_mvp/tests/integration/test_api/: __init__.py  test_document_endpoints.py  test_search_endpoints.py
02_phase1_mvp/tests/unit/test_services/: test_document_service.py  test_search_service.py
05_operations/docs/procedures/: 13_KnowledgeManagementOperations.md
_archive/deprecated_original_docs_structure/: README.md
_archive/deprecated_original_docs_structure/00_project_foundation/architecture/: 02_SystemArchitecture.md
_archive/deprecated_original_docs_structure/00_project_foundation/charter/: 00_ProjectCharter.md
_archive/deprecated_original_docs_structure/00_project_foundation/management/: 00_DocumentManagementGuideline.md  01_PhaseTransitionProcedures.md
_archive/deprecated_original_docs_structure/00_project_foundation/standards/: 11_SecurityDesign.md
_archive/deprecated_original_docs_structure/01_analysis_design/requirements/: 01_PRD.md  03_FunctionalRequirements.md  04_NonFunctionalRequirements.md
_archive/deprecated_original_docs_structure/02_phase1_mvp/development/: 19_Phase1DatabaseSetupScripts.md
_archive/deprecated_original_docs_structure/02_phase1_mvp/technical/: 17_Phase1TechnicalSpecification.md
_archive/deprecated_original_docs_structure/05_operations/procedures/: 12_TestSpecification.md
_archive/deprecated_original_docs_structure/99_archive/: 15_PhasedDocumentManagementPlan.md
_archive/proposals_original/: knowledge_management_framework.md  rag_documentation_framework.md  rag_implementation_options.md
